[project]
name = "tunnelvault"
version = "1.2.1"
requires-python = ">=3.10"
dependencies = [
    "dnslib>=0.9",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-n auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.4",
]
